Archive2/ef/1c86e8d1331864/output
main.cpp:35:8: error: no member named 'transform' in namespace 'std'
                std::transform(it, it + 5, std::begin(digits), [](char c) { return static_cast<int>(c - '0'); });
                ~~~~~^
1 error generated.
